# translation_flaskapp

./: .gitignore  README.md  pyproject.toml  requirements.txt
translation_flaskapp/: __init__.py  __main__.py  translation.py
translation_flaskapp/templates/: index.html
